# Python42-Pools

./: README.md  package-lock.json
Array/ex00/: give_bmi.py
Array/ex01/: array2D.py
Array/ex02/: load_image.py
Array/ex03/: load_image.py  zoom.py
Array/ex04/: rotate.py
Array/ex05/: pimp_image.py
DataTable/ex01/: aff_life.py  load_csv.py
DataTable/ex02/: aff_pop.py  load_csv.py
DataTable/ex03/: projection_life.py
Dod/ex00/: statistics.py
Dod/ex01/: in_out.py
Dod/ex02/: callLimit.py
Dod/ex03/: new_student.py
OOP/ex00/: S1E9.py
OOP/ex01/: S1E7.py
OOP/ex02/: DiamondTrap.py  S1E7.py
OOP/ex03/: ft_calculator.py  test.py
OOP/ex04/: ft_calculator.py  tester.py
starting/: a.sh  test.sh
starting/ex00/: Hello.py
starting/ex01/: format_ft_time.py
starting/ex02/: find_ft_type.py
starting/ex03/: NULL_not_found.py
starting/ex04/: whatis.py
starting/ex05/: building.py
starting/ex06/: filterstring.py  ft_filter.py
starting/ex07/: sos.py
starting/ex08/: Loading.py
starting/ex09/: LICENSE  README.md  pyproject.toml
