[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ft_package"]

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    {name = "Morx", email = "jchennak42@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.6"
readme = "README.md"
classifiers = [

]

[project.urls]
Homepage = "https://github.com/thejewels00"
